@@ -1,8 +1,8 @@
 package com.ejada.gateway.admin.model;
 
 import java.time.Instant;
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
 /**
  * Aggregated view returned from {@code /api/v1/admin/overview}.
@@ -14,6 +14,11 @@ public record AdminOverview(
     long downServices,
     long degradedServices,
     List<AdminServiceSnapshot> services) {
+
+  public AdminOverview {
+    services = services == null ? List.of() : List.copyOf(services);
+    services.forEach(Objects::requireNonNull);
+  }
 
   public static AdminOverview fromSnapshots(List<AdminServiceSnapshot> snapshots) {
     if (snapshots == null || snapshots.isEmpty()) {
@@ -34,6 +39,6 @@ public record AdminOverview(
   }
 
   public static AdminOverview empty() {
-    return new AdminOverview(Instant.now(), 0, 0, 0, 0, Collections.emptyList());
+    return new AdminOverview(Instant.now(), 0, 0, 0, 0, List.of());
   }
 }
